--- a/public/edit.html
+++ b/public/edit.html
@@ -5,6 +5,8 @@
         <title>Fashion Closet</title>
         <link href="/styles/styles.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
+          crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header">
@@ -22,6 +24,8 @@
             <input id="look-title" class="title-input" placeholder="Look name">
             <textarea id="look-body" class="body-input" placeholder="Describe it in a few words"></textarea>
             <button id="remove-look" class="button slide_right">Remove look</button>
+            <input type="file"/>
+            <img id="myImg" src="#" alt="your image">
         </div>
         <script src="/scripts/edit-bundle.js"></script>
     </body>
